package gabriel.protocol.server;

message Monster
{
    optional int32 monster_id = 1;
    optional int32 monster_hp = 2;
    optional string monster_name = 3;
}

enum OuterEnum
{
    ENUM_OUTER_1 = 5;
    ENUM_OUTER_2 = 6;
    ENUM_OUTER_3 = 7;
}
    
message Outer
{
    optional int32 outer_id = 1;
    optional string outer_string = 2;
    
    enum InnerEnum
    {
        ENUM_INNER_1 = 99;
        ENUM_INNER_2 = 98;
        ENUM_INNER_3 = 102;
    }
    
    message Inner
    {
        optional int32 inner_id = 1;
        optional string inner_string =2;
    }
}

message DB_Msg
{
    optional int32 dbmsg_id = 1;
    optional Monster monster = 2;
    optional OuterEnum outerenum = 3;
    optional Outer outer = 4;
    optional Outer.InnerEnum innerenum = 5;
    optional Outer.Inner inner = 6;
}
