package gabriel.protocol;

message PubMsg
{
    optional int32 pubid = 1;
    optional string pubname = 2;
}

message PubOuter
{
    optional int32 outerid = 1;
    optional string outername = 2;

    message PubInner
    {
        optional int32 innerid = 1;
        optional string innername = 2;
    }

    enum PubInnerEnum
    {
        ENUM_PUBINNER_1 = 8;
        ENUM_PUBINNER_2 = 9;
        ENUM_PUBINNER_3 = 10;
    }
}

enum PubEnum
{
    ENUMPUB_1 = 999;
    ENUMPUB_2 = 233;
    ENUMPUB_3 = 234;
}    
